[gd_scene load_steps=2 format=3 uid="uid://tutorial_system_001"]

[ext_resource type="Script" path="res://scripts/managers/tutorial_manager.gd" id="1"]

[node name="TutorialSystem" type="CanvasLayer"]
layer = 100
script = ExtResource("1")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="InstructionPanel" type="PanelContainer" parent="Overlay"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Overlay/InstructionPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Overlay/InstructionPanel/MarginContainer"]
layout_mode = 2

[node name="StepLabel" type="Label" parent="Overlay/InstructionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Paso 1/5"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Overlay/InstructionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextLabel" type="RichTextLabel" parent="Overlay/InstructionPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center]Texto de instrucciones aqu√≠[/center]"
fit_content = true

[node name="HSeparator2" type="HSeparator" parent="Overlay/InstructionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxButtons" type="HBoxContainer" parent="Overlay/InstructionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CheckBoxNoShow" type="CheckBox" parent="Overlay/InstructionPanel/MarginContainer/VBoxContainer/HBoxButtons"]
visible = false
layout_mode = 2
text = "No mostrar de nuevo"

[node name="Spacer" type="Control" parent="Overlay/InstructionPanel/MarginContainer/VBoxContainer/HBoxButtons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BtnNext" type="Button" parent="Overlay/InstructionPanel/MarginContainer/VBoxContainer/HBoxButtons"]
layout_mode = 2
text = "Siguiente"

[node name="BtnSkip" type="Button" parent="Overlay/InstructionPanel/MarginContainer/VBoxContainer/HBoxButtons"]
layout_mode = 2
text = "Saltar tutorial"
